# sound_board

./: .gitignore
sound_board/: Cargo.toml
sound_board/src/: app.rs  audio.rs  lib.rs  main.rs
sound_board/src/basic_audio_driver_rust/: audio_stream.rs  combine_streams.rs  mod.rs  modulation.rs  modulation_stream.rs
sound_board/src/log_system/: log.rs  mod.rs
sound_board/src/pages/: custom_graph.rs  menubar.rs  mod.rs  modulation.rs  side_panel.rs
