[package]
name = "sound_board"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.0"

[dependencies]
cpal = "0.15.3"


egui = {version = "^0.27.2"}
egui_extras = { version = "^0.27.2", features = ["image", "svg"]}
epaint = {version = "0.27.2"}
eframe = {version = "^0.27.2", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence"
]}
image = { version = "0.25.1", features = ["jpeg", "png", "webp"] }
ellipse = { version = "0.2.0" }

serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1" }

chrono = "0.4.38"
colored = "2.1.0"




[profile.release]
opt-level = 2