[package]
name            = "sound_board"
version         = "0.1.0"
edition         = "2021"
rust-version    = "1.78.0"

[dependencies]
# GUI crates
egui            = {version = "0.27.2", features = ["persistence"]}
epaint          = {version = "0.27.2"}
egui_extras     = {version = "0.27.2", features = ["image", "svg"]}
image           = {version = "0.25.1", features = ["jpeg", "png", "webp"] }
eframe          = {version = "0.27.2", default-features = false, features = [
    "default_fonts",
    "persistence",
    "glow",
]}

egui_graphs     = {version = "0", features = ["egui_persistence"]}
petgraph        = {version = "0.6"}

# OS dependencies for audio system
wasapi          = {version = "0.15.0"}
sysinfo         = {version = "0.30.9"}

# Next crates are for the logging system
chrono          = {version = "0.4.38"}
colored         = {version = "2.1.0"}

# Saving settigs to json]
#serde           = { version = "^1", features = ["derive"] }
#serde_json      = { version = "^1" }

[profile.release]
opt-level       = 3
lto             = true
